# PROI1

./: CMakeLists.txt
include/: MainWindow.h
src/: MainWindow.cpp  main.cpp
